# libstats

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  .gitmessage  .iwyu_mappings.imp  .markdownlint-style.rb  .markdownlint.yaml  .pre-commit-config-simple.yaml  .pre-commit-config.yaml  .releaserc.json  .secrets.baseline  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Doxyfile.in  LICENSE  MIGRATION_GUIDE.md  PERFORMANCE_REVIEW_NOTES.md  PLAN.md  PROJECT_CONCEPT.md  README.md  THIRD_PARTY_NOTICES.md  VERSIONING.md  WARP.md  cliff.toml  fix_examples.py  iwyu_recommendations.md  iwyu_report.txt  magic_numbers.csv  magic_numbers_report.txt  parallel_threshold_benchmark_results.csv  strategy_profile_results.csv  test_alignment_demo.cpp  test_header_fix.cpp
.github/: dependabot.yml
cmake/: CompilerFlags.cmake  DetectAVX512.cmake  SIMDApplication.cmake  SIMDDetection.cmake  Threading.cmake  libstats-config.cmake.in  libstats.pc.in  libstats_version.h.in
consumer_example/: CMakeLists.txt  README.md
consumer_example_fetchcontent/: CMakeLists.txt  README.md  main.cpp
diagnostics/: CACHE_PERFORMANCE_INVESTIGATION.md  CACHE_STRATEGY_ANALYSIS.md  DISTRIBUTION_CACHE_CONSOLIDATION_ANALYSIS.md  README.md  cache_aware_batch_diagnostic  cache_aware_batch_diagnostic.cpp  cache_aware_continuous_diagnostic  cache_aware_continuous_diagnostic.cpp  cache_grain_size_diagnostic  cache_grain_size_diagnostic.cpp
docs/: ACADEMIC_REFERENCES.md  API_consistency_analysis.md  AVX512_TESTING_GUIDE.md  BUILD_SYSTEM_GUIDE.md  CI_CD_DEBUGGING_GUIDE.md  CI_CD_GUIDE.md  CI_CD_SETUP.md  CMAKE_MODERNIZATION_PHASES.md  DISTRIBUTION_REFACTORING_POST_V1.md  Gaussian_Phase3_Completion_Summary.md  HEADER_ARCHITECTURE_GUIDE.md  HEADER_TOOLS_GUIDE.md  IWYU_ANALYSIS_TOOLS_EXAMPLES_TESTS.md  MATH_CACHE_BENCHMARK.md  NAMESPACE_PHASE2_PLAN.md  NAMESPACE_REFACTORING_PLAN.md  NAMESPACE_REFACTORING_SUMMARY.md  NEON_ERF_DERIVATION.md  NEON_ERF_DIVERGENCE_AUDIT.md  NEON_LOG_DERIVATION.md  NEON_LOG_DIVERGENCE_AUDIT.md  NEON_TRIG_DERIVATION.md  NEON_TRIG_DIVERGENCE_AUDIT.md  PARALLEL_BATCH_PROCESSING_GUIDE.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PLATFORM_HEADER_CONSOLIDATION_SUMMARY.md  SIMD_BENCHMARK_RESULTS.md  SIMD_OPTIMIZATION_REFERENCE.md  Setup_Status_Conversion_from_libhmm.md  VALIDATION_HISTORY.md  WINDOWS_SUPPORT_GUIDE.md  adaptive_cache_implementation_roadmap.md  api_simplification_roadmap.md  architectural_constants_complete.md  batch-processing-refactoring.md  build_types.md  cache_usage_analysis.md  constructor_safety_conversion_report.md  core_header_consolidation_summary.md  core_platform-independent_improvements.md  (+53 more)
examples/: CMakeLists.txt  EXAMPLES_MODERNIZATION_SUMMARY.md  basic_usage.cpp  comparative_distributions_demo.cpp  distribution_families_demo.cpp  error_handling_demo.cpp  exponential_performance_benchmark.cpp  gaussian_performance_benchmark.cpp  gaussian_phase3_update_demo.cpp  logpdf_and_likelihood_demo.cpp  parallel_execution_demo.cpp  performance_dispatch_demo.cpp  performance_learning_demo.cpp  platform_parallel_demo.cpp  poisson_usage_demo.cpp  quick_start_tutorial.cpp  statistical_validation_demo.cpp  uniform_usage_demo.cpp
include/: adaptive_cache.h  benchmark.h  constants.h  cpu_detection.h  discrete.h  distribution_base.h  exponential.h  gamma.h  gaussian.h  libstats.h  log_space_ops.h  math_utils.h  parallel_execution.h  poisson.h  safety.h  simd.h  thread_pool.h  uniform.h  work_stealing_pool.h
scripts/: PROFILING_METHOD.md  README.md  analyze_namespaces.sh  analyze_namespaces_old.py  apply_phase1_fix.cmake  build.sh  capture_dispatcher_profile.ps1  capture_dispatcher_profile.sh  check-copyright.sh  check-no-debug.sh  check-pragma-once.sh  check_collisions.py  ci-local.sh  execute_phase1.sh  (+40 more)
tests/: CMakeLists.txt  basic_test_template.h  benchmark_simd_all.cpp  compare_math_utils_with_scipy.py  debug_parallel_for.cpp  enhanced_test_template.h  test_adaptive_cache.cpp  test_advanced_methods.cpp  test_atomic_parameters.cpp  test_batch_math_regressions.cpp  test_benchmark.cpp  test_benchmark_basic.cpp  test_beta_basic.cpp  test_beta_enhanced.cpp  test_binomial_basic.cpp  test_binomial_enhanced.cpp  test_cache_integration.cpp  test_cauchy_basic.cpp  test_cauchy_enhanced.cpp  test_chi_squared_basic.cpp  test_chi_squared_enhanced.cpp  test_constants.cpp  test_copy_move_fix.cpp  test_copy_move_stress.cpp  test_cpp20_features.cpp  test_cpu_detection.cpp  test_discrete_analysis.cpp  test_discrete_basic.cpp  test_discrete_enhanced.cpp  test_distribution_analysis.cpp  test_dual_api.cpp  test_dynamic_linking.cpp  test_error_handling_comprehensive.cpp  test_exponential_basic.cpp  test_exponential_enhanced.cpp  test_forward_compatibility_aliases.cpp  test_gamma_basic.cpp  test_gamma_enhanced.cpp  test_gaussian_analysis.cpp  test_gaussian_basic.cpp  (+61 more)
tests/include/: basic_test_runner.h  benchmarks.h  constants.h  enhanced_test_suite.h  fixtures.h  test_common.h  tests.h  validators.h
tools/: CMakeLists.txt  README.md  adaptive_learning_analyzer.cpp  analyze_magic_numbers.py  compilation_benchmark.py  constants_inspector.cpp  copy_move_stress.cpp  cpp20_features_inspector.cpp  cpu_info.cpp  cpu_test.cpp  demo_phase1_optimization.py  demo_phase2_optimization.py  empirical_characteristics_demo.cpp  find_unsafe_constructor_usage.py  gather_throughput_probe.cpp  gaussian_strategy_profile.cpp  grain_size_optimizer.cpp  header_analysis.py  header_dashboard.py  header_insights.py  header_optimization_analysis.py  header_optimization_summary.py  learning_analyzer.cpp  math_cache_benchmark.py  neon_table_transcendental_probe.cpp  parallel_batch_fitting_benchmark.cpp  parallel_correctness_verification.cpp  parallel_threshold_benchmark.cpp  parameter_recovery_benchmark.cpp  performance_benchmark.cpp  performance_dispatcher_tool.cpp  quantile_accuracy.cpp  replace_domain_constants.py  replace_magic_numbers.py  simd_verification.cpp  sleef_benchmark.cpp  static_analysis.py  strategy_profile.cpp  system_capabilities_inspector.cpp  system_capabilities_inspector_broken.cpp  (+8 more)
(+774 files in other folders)
